--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,4 +63,6 @@ dependencies {
     implementation 'org.greenrobot:eventbus:3.1.1' // eventbus
 
     implementation 'org.greenrobot:greendao:3.2.2' // 数据库
+
+    implementation 'com.just.agentweb:agentweb:4.0.2' // webview
 }
